[gd_scene load_steps=21 format=3 uid="uid://bl1hdflkphqup"]

[ext_resource type="Script" path="res://Ship/Walls/Thruster/Thruster.gd" id="1_tutll"]
[ext_resource type="Texture2D" uid="uid://dobw14md45sbd" path="res://Ship/wall_tilesheet.png" id="2_0a064"]
[ext_resource type="Texture2D" uid="uid://d1dv1b375xke5" path="res://Ship/Walls/Thruster/jet_particle_texture.png" id="3_krnpy"]
[ext_resource type="Texture2D" uid="uid://dhtphl8nnev0i" path="res://Ship/Walls/Thruster/sidejet_particle_texture.png" id="4_a8wcp"]
[ext_resource type="AudioStream" uid="uid://csnros6lt208b" path="res://Ship/Walls/Thruster/jet.wav" id="4_xdkpc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hy2pl"]
atlas = ExtResource("2_0a064")
region = Rect2(96, 64, 32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yeoku"]
size = Vector2(162, 162)

[sub_resource type="Gradient" id="Gradient_5pfsn"]
offsets = PackedFloat32Array(0, 0.213333, 1)
colors = PackedColorArray(0.588235, 0.231373, 0.172549, 1, 0.524401, 0.288252, 0.482994, 1, 0.0743254, 0.715059, 0.985536, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_kfmsg"]
gradient = SubResource("Gradient_5pfsn")

[sub_resource type="Curve" id="Curve_hmsjk"]
max_value = 5.0
_data = [Vector2(0.62037, 0.470661), 0.0, 0.0, 0, 0, Vector2(0.987654, 5), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_itnbh"]
curve = SubResource("Curve_hmsjk")

[sub_resource type="Curve" id="Curve_otvt4"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.105263), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_dnlkm"]
curve = SubResource("Curve_otvt4")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_o734o"]
lifetime_randomness = 0.1
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(10, 45, 1)
spread = 0.0
initial_velocity_min = 600.0
initial_velocity_max = 700.0
radial_velocity_min = -400.0
radial_velocity_max = -400.0
radial_velocity_curve = SubResource("CurveTexture_itnbh")
gravity = Vector3(0, 0, 0)
scale_max = 1.25
scale_curve = SubResource("CurveTexture_dnlkm")
color_ramp = SubResource("GradientTexture1D_kfmsg")
turbulence_influence_min = 0.0
turbulence_influence_max = 0.0

[sub_resource type="Gradient" id="Gradient_7pate"]
colors = PackedColorArray(1, 1, 1, 1, 0.650128, 0.650128, 0.650128, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_t71rq"]
gradient = SubResource("Gradient_7pate")

[sub_resource type="Curve" id="Curve_lx4c2"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.810651, 0.703297), -0.495238, -0.495238, 0, 0, Vector2(1, 0.105263), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_wx57o"]
curve = SubResource("Curve_lx4c2")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ivdb8"]
particle_flag_disable_z = true
angle_min = -45.0
angle_max = 45.0
direction = Vector3(5, 0, 0)
spread = 5.0
initial_velocity_min = 200.0
initial_velocity_max = 300.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_curve = SubResource("CurveTexture_wx57o")
color_ramp = SubResource("GradientTexture1D_t71rq")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_glnne"]
polygon = PackedVector2Array(-16, -8, -16, 8, 8, 8, 8, -8)

[node name="Thruster" type="Node2D"]
script = ExtResource("1_tutll")

[node name="Sprite2D" type="Sprite2D" parent="."]
use_parent_material = true
scale = Vector2(5, 5)
texture = SubResource("AtlasTexture_hy2pl")

[node name="Hitbox" type="AnimatableBody2D" parent="."]
sync_to_physics = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_yeoku")

[node name="JetParticles" type="GPUParticles2D" parent="."]
position = Vector2(68, -1)
amount = 2000
process_material = SubResource("ParticleProcessMaterial_o734o")
texture = ExtResource("3_krnpy")
lifetime = 0.75
speed_scale = 2.0
local_coords = true
trail_enabled = true
trail_lifetime = 0.1

[node name="RightSideJetParticles" type="GPUParticles2D" parent="."]
z_index = -1
position = Vector2(35, -70)
rotation = -0.872665
emitting = false
process_material = SubResource("ParticleProcessMaterial_ivdb8")
texture = ExtResource("4_a8wcp")
lifetime = 0.5
speed_scale = 2.0
local_coords = true

[node name="LeftSideJetParticles" type="GPUParticles2D" parent="."]
z_index = -1
position = Vector2(35, 70)
rotation = 0.698132
emitting = false
process_material = SubResource("ParticleProcessMaterial_ivdb8")
texture = ExtResource("4_a8wcp")
lifetime = 0.5
speed_scale = 2.0
local_coords = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
scale = Vector2(5, 5)
occluder = SubResource("OccluderPolygon2D_glnne")

[node name="Sounds" type="Node2D" parent="."]
visible = false

[node name="Jet" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("4_xdkpc")
volume_db = -5.0
max_distance = 4000.0
attenuation = 4.0
bus = &"SFX"
area_mask = 0
